chore(styles): fix overflowing mailList component

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,142 +1,148 @@
 .header {
-  background-color: #003580;
-  color: white;
-  display: flex;
-  justify-content: center;
-  position: relative;
+	background-color: #003580;
+	color: white;
+	display: flex;
+	justify-content: center;
+	position: relative;
 }
 
 .headerContainer {
-  width: 100%;
-  max-width: 1024px;
-  margin: 20px 0px 100px 0px;
+	width: 100%;
+	max-width: 1024px;
+	margin: 20px 0px 100px 0px;
 }
 
 .headerContainer.listMode {
-  margin: 20px 0px 0px 0px;
+	margin: 20px 0px 0px 0px;
 }
 
 .headerList {
-  display: flex;
-  gap: 40px;
-  margin-bottom: 50px;
+	display: flex;
+	gap: 40px;
+	margin-bottom: 50px;
 }
 
 .headerListItem {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
 
 .headerListItem.active {
-  border: 1px solid white;
-  padding: 10px;
-  border-radius: 20px;
+	border: 1px solid white;
+	padding: 10px;
+	border-radius: 20px;
 }
 
 .headerDesc {
-  margin: 20px 0px;
+	margin: 20px 0px;
 }
 
-.headerBtn, .searchBtn {
-  background-color: #0071c2;
-  color: white;
-  font-weight: 500;
-  border: none;
-  padding: 14px;
-  cursor: pointer;
-  border-radius: 5px;
+.headerBtn,
+.searchBtn {
+	background-color: #0071c2;
+	color: white;
+	font-weight: 500;
+	border: none;
+	padding: 14px;
+	cursor: pointer;
+	border-radius: 5px;
 }
 
 .searchBtn {
-  padding: 8px 14px;
+	padding: 6px 14px;
 }
 
 .headerBtn {
-  padding: 14px;
-  margin-bottom: 60px;
+	padding: 14px;
+	margin-bottom: 60px;
+}
+
+.headerSearchContainer {
+	height: 50px;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	bottom: -30px;
 }
 
 .headerSearch {
-  height: 30px;
-  background-color: white;
-  border: 3px solid #febb02;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 10px 0px;
-  margin-right: 150px;
-  border-radius: 5px;
-  position: absolute;
-  bottom: -30px;
-  right: 0;
-  z-index: 999;
-  width: 100%;
-  max-width: 1024px;
+	padding: 15px;
+	background-color: white;
+	border: 3px solid #febb02;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border-radius: 5px;
+	left: 0;
+	z-index: 999;
 }
 
 .headerIcon {
-  color: lightgray;
+	color: lightgray;
 }
 
 .headerSearchItem {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.headerSearchItem:nth-child(3) {
+  margin-left: 20px;
 }
 
 .headerSearchInput {
-  border: none;
-  outline: none;
+	border: none;
+	outline: none;
 }
 
 .headerSearchText {
-  color: lightgray;
-  cursor: pointer;
+	color: lightgray;
+	cursor: pointer;
 }
 
 .date {
-  position: absolute;
-  top: 50px;
-  z-index: 2;
+	position: absolute;
+	top: 50px;
+	z-index: 2;
 }
 
 .options {
-  z-index: 2;
-  position: absolute;
-  top: 50px;
-  background-color: white;
-  color: gray;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+	z-index: 2;
+	position: absolute;
+	top: 50px;
+	background-color: white;
+	color: gray;
+	border-radius: 5px;
+	-webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
 }
 
 .optionItem {
-  width: 200px;
-  display: flex;
-  justify-content: space-between;
-  margin: 10px;
+	width: 200px;
+	display: flex;
+	justify-content: space-between;
+	margin: 10px;
 }
 
 .optionCounter {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-size: 12px;
-  color: black;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	font-size: 12px;
+	color: black;
 }
 
 .optionCounterButton {
-  width: 30px;
-  height: 30px;
-  border: 1px solid #0071c2;
-  color: #0071c2;
-  cursor: pointer;
-  background-color: white;
+	width: 30px;
+	height: 30px;
+	border: 1px solid #0071c2;
+	color: #0071c2;
+	cursor: pointer;
+	background-color: white;
 }
 
 .optionCounterButton:disabled {
-  cursor: not-allowed;
+	cursor: not-allowed;
 }
-
