--- a/styles/MailList.module.css
+++ b/styles/MailList.module.css
@@ -1,29 +1,29 @@
-.mail{
-  width: 100%;
-  margin-top: 50px;
-  background-color: #003580;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  padding: 50px;
+.mail {
+	min-width: 100%;
+	margin: 50px 0;
+	background-color: #003580;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+	padding: 50px 0;
 }
 
-.mailInputContainer>input{
-  width: 300px;
-  padding: 14px;
-  border: none;
-  margin-right: 10px;
-  border-radius: 5px;
+.mailInputContainer > input {
+	width: 300px;
+	padding: 14px;
+	border: none;
+	margin-right: 10px;
+	border-radius: 5px;
 }
 
-.mailInputContainer>button{
-  padding: 14px;
-  background-color: #0071c2;
-  color: white;
-  font-weight: 500;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.mailInputContainer > button {
+	padding: 14px;
+	background-color: #0071c2;
+	color: white;
+	font-weight: 500;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
 }
